--- a/input_files/preset_settings.json
+++ b/input_files/preset_settings.json
@@ -49,7 +49,7 @@
             "foreground": "#a0adb4",
             "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
             "hidden": true,
-            "icon": "C:\\Users\\lv\\Downloads\\random images\\terminal.ico",
+            "icon": "D:\\Desktop\\Terminal_Randomizer\\terminal.ico",
             "intenseTextStyle": "bright",
             "name": "Terminal",
             "opacity": 100,
