Fixed Preset File, Improved First Run, fixed Readme

--- a/input_files/preset_settings.json
+++ b/input_files/preset_settings.json
@@ -29,16 +29,16 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-    "initialRows": 20,
     "initialCols": 70,
+    "initialRows": 20,
     "profiles": {
         "defaults": {
             "adjustIndistinguishableColors": false,
-            "backgroundImage": "D:\\Desktop\\Terminal_Randomizer\\photos\\tumblr_d4116d93eccf12e8278a3e4e2d750028_195708b5_540.gif",
+            "backgroundImage": "D:\\Desktop\\Terminal_Randomizer\\photos\\giphy.gif",
             "backgroundImageOpacity": 0.3834677638969509,
             "colorScheme": "Campbell",
             "commandline": "%SystemRoot%\\System32\\cmd.exe",
-            "cursorColor": "#71bac6",
+            "cursorColor": "#71BAC6",
             "cursorShape": "vintage",
             "experimental.pixelShaderPath": "D:\\Desktop\\Terminal_Randomizer\\input_files\\Retro.hlsl",
             "font": {
@@ -46,19 +46,17 @@
                 "size": 20,
                 "weight": "light"
             },
-            "foreground": "#a0adb4",
-            "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+            "foreground": "#78f7ee",
             "hidden": true,
             "icon": "D:\\Desktop\\Terminal_Randomizer\\terminal.ico",
             "intenseTextStyle": "bright",
             "name": "Terminal",
             "opacity": 100,
             "padding": "15",
-            "selectionBackground": "#28353c",
-            "useAcrylic": false,
-            "tabColor": "#28353c",
+            "selectionBackground": "#634570",
+            "tabColor": "#df93e1",
             "tabTitle": "Terminal",
-            "startingDirectory": "D:\\Desktop"
+            "useAcrylic": false
         },
         "list": [
             {
@@ -68,30 +66,10 @@
                 "name": "Windows PowerShell"
             },
             {
-                "adjustIndistinguishableColors": false,
-                "backgroundImage": "D:\\Desktop\\Terminal_Randomizer\\photos\\200 (1).gif",
-                "backgroundImageOpacity": 0.38319717035006523,
-                "colorScheme": "Campbell",
-                "commandline": "%SystemRoot%\\System32\\cmd.exe",
-                "cursorColor": "#708d8d",
-                "experimental.pixelShaderPath": "D:\\Desktop\\Terminal_Randomizer\\input_files\\Retro.hlsl",
-                "font": {
-                    "face": "Source Code Pro",
-                    "size": 20,
-                    "weight": "light"
-                },
-                "foreground": "#9fb2c2",
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "hidden": true,
-                "icon": "D:\\Downloads\\terminal.ico",
-                "intenseTextStyle": "bright",
                 "name": "Terminal",
-                "opacity": 100,
-                "padding": "15",
-                "selectionBackground": "#273a4a",
-                "useAcrylic": false,
-                "tabColor": "#273a4a",
-                "startingDirectory": "D:\\Desktop"
+                "useAcrylic": false
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
